[build-system]
requires = [
    "setuptools>=62",
    "setuptools_scm>=8.0.4",
    "wheel",
    "ninja==1.11.1",
    "cmake>=3.25.0",
    "mypy==1.0.0",
]
build-backend = "setuptools.build_meta"

# https://beta.ruff.rs/docs/configuration/
[tool.ruff]
select = [
    "UP",
    "F",
    "I"
]
ignore = [
    "UP015",
    "Q000",
    "F405"
]
target-version = "py38"

[tool.ruff.isort]
lines-between-types = 1
known-first-party = ["paddlefx"]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
minversion = "7.0.0"
pythonpath = "tests"
testpaths = ["tests"]
filterwarnings = [
    # Ignore warnings raised by paddlepaddle 2.4
    "ignore::DeprecationWarning",
]

[tool.setuptools_scm]
version_file = "src/paddlefx/_version.py"
