[build-system]
requires = [
    "setuptools>=62",
    "setuptools_scm>=8.0.4",
    "wheel",
    "ninja==1.11.1",
    "cmake>=3.25.0",
    "mypy==1.0.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = true
# default value may too big to run
workers = 4

# https://beta.ruff.rs/docs/configuration/
[tool.ruff]
exclude = [".cmake-format.py"]
target-version = "py38"

[tool.ruff.lint]
select = [
    "UP",
    "F",
    "I",
    # "B",
    # "C4",
    # "PGH",
    # "RUF",
    "W",
    "YTT"
]
ignore = [
    "UP015",
    "F405"
]

[tool.ruff.lint.isort]
lines-between-types = 1
known-first-party = ["paddlefx"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I002"]
"setup.py" = ["F401", "I002"]

[tool.pytest.ini_options]
minversion = "7.0.0"
pythonpath = "tests"
testpaths = ["tests"]
filterwarnings = [
    # Ignore warnings raised by paddlepaddle 2.4
    "ignore::DeprecationWarning",
]

[tool.setuptools_scm]
version_file = "src/paddlefx/_version.py"
